/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Edi.Requests.AggregatedMeasureData";

message AggregatedTimeSeriesRequest {
  optional string settlement_version = 1; 
  optional string metering_point_type = 2;
  optional string grid_area_code = 4;
  optional string energy_supplier_id = 5;
  optional string balance_responsible_id = 6;
  optional string grid_responsible_id = 8; //set sender_id if sender_role is grid and grid area is present! LRN: why not set this always?
  Period period = 3;
}

message Period {
  google.protobuf.Timestamp start_of_period = 3;
  google.protobuf.Timestamp end_of_period = 4;
}